--- a/home.html
+++ b/home.html
@@ -92,13 +92,13 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="icon icon-prev">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10Zm2.03-13.53a.75.75 0 0 1 0 1.06L11.56 12l2.47 2.47a.75.75 0 1 1-1.06 1.06l-3-3a.75.75 0 0 1 0-1.06l3-3a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"/></svg>
+                            <i class="fa-solid fa-circle-chevron-left"></i>
                         </div>
                         <div class="game-img">
                             <img src="./images/DESTACADOS/minecraft.jpg" alt="Juego destacado 1">
                         </div>
                         <div class="icon icon-next">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10ZM9.97 8.47a.75.75 0 0 1 1.06 0l3 3a.75.75 0 0 1 0 1.06l-3 3a.75.75 0 1 1-1.06-1.06L12.44 12L9.97 9.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"/></svg>
+                            <i class="fa-solid fa-circle-chevron-right"></i>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -175,17 +175,17 @@
                 <div class="carrousel">
                     <h3>Cartas</h3>
                     <div class="carrousel-cards">
-                        <div class="card">
-                            <div class="card-img">
-                                <div class="card-hover">
-                                    <h3>Chinchón</h3>
-                                    <hr class="card-hr">
-                                    <p>Juego de cartas cuyo objetivo es combinar tus 7 cartas en series de escaleras del mismo palo o en grupos de 3 o más cartas</p>
+                            <div class="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Chinchón</h3>
+                                        <hr class="card-hr">
+                                        <p>Juego de cartas cuyo objetivo es combinar tus 7 cartas en series de escaleras del mismo palo o en grupos de 3 o más cartas</p>
+                                    </div>
+                                    <img src="images/CARTAS/Chinchón.jpg" alt="Chinchón" class="img">
                                 </div>
-                                <img src="images/CARTAS/Chinchón.jpg" alt="Chinchón" class="img">
+                                <button class="btn btn-jugar">Jugar</button>
                             </div>
-                            <button class="btn btn-jugar">Jugar</button>
-                        </div>
                         <div class="card">
                             <div class="card-img">
                                 <div class="card-hover">
@@ -292,7 +292,7 @@
                 </div>
             </div>
 
-            </div>
+        </div>
         <footer class="footer-content">
             <div>
                 <img src="./images/logo.png" alt="Logo" class="logo">
