--- a/juego.html
+++ b/juego.html
@@ -94,29 +94,41 @@
                 <div class="juego">
                     <img src="images/4 EN LINEA/juego.jpeg" alt="Juego">
                 </div>
-                <div class="juego-pantalla-intermedia"></div>
-                <button>Jugar</button>
-                <div class="multimedia-juego">
-                    <div class="images-juego">
-                        <img src="images/4 EN LINEA/burro-sheck~3.png" alt="Burro" class="img-juego">
-                        <img src="images/4 EN LINEA/gato~3.jpeg" alt="Gato" class="img-juego">
-                        <img src="images/4 EN LINEA/juego-principal.jpg" alt="Juego 4 en linea">
-                    </div>
-                    <div class="juego-video">
-                        <img src="images/4 EN LINEA/burrovsgato.jpg" alt="Burro vs Gato video">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="var(--reject)" d="M12 4c-4.41 0-8 3.59-8 8s3.59 8 8 8s8-3.59 8-8s-3.59-8-8-8zM9.5 16.5v-9l7 4.5l-7 4.5z"/><path fill="var(--white)" d="m9.5 16.5l7-4.5l-7-4.5z"/></svg>
-                    </div>
+                <div class="juego-pantalla-intermedia">
+                    <button>Jugar</button>
                 </div>
             </div>
+            <!-- slider de juego -->
+            <div class="slider-juego">
+                <ul class="slide-track-juego">
+                    <li class="slide-juego"><img src="images/4 EN LINEA/burro-de-shrek.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/burro-sheck~3.png" alt="" class="img-ficha"></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/burrovsgato.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/gato2.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/gato~3.jpeg" alt="" class="img-ficha"></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/juego-principal.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/shrek.jpg" alt=""></li>
+        
+                    <!-- mismas slides -->
+                    <li class="slide-juego"><img src="images/4 EN LINEA/burro-de-shrek.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/burro-sheck~3.png" alt="" class="img-ficha"></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/burrovsgato.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/gato2.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/gato~3.jpeg" alt="" class="img-ficha"></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/juego-principal.jpg" alt=""></li>
+                    <li class="slide-juego"><img src="images/4 EN LINEA/shrek.jpg" alt=""></li>
+                </ul>
+            </div>
+            <!-- Instrucciones, comentarios y publicidades -->
             <div class="contenido-publicidades">
                 <div class="contenido">
-                    <div class="instrucciones-juego">
+                    <div class="instrucciones">
                         <h2>4 en linea: Burro vs Gato - Shrek</h2>
                         <p>Las normas del cuatro en línea son muy sencillas. Se juega siempre entre 2 jugadores y sobre un tablero de 7x6 casillas. En cada turno cada jugador coloca una ficha de su personaje en una columna y esta cae hasta la primera casilla disponible. El que consigue ubicar 4 fichas del mismo personaje seguidas en horizontal, vertical u oblicuo gana. Si nadie lo consigue la partida termina en empate.</p>
                         <h3>Comandos para jugar</h3>
                         <hr class="card-hr">
                         <div>
-                            <div class="instrucciones-juego-flechas">
+                            <div class="instrucciones-flechas">
                                 <p>Utilizar las flechas del teclado (izquierda y derecha), para elegir la columna en la que quieres que caiga la ficha.</p>
                                 <i class="fa-solid fa-left-long fa-2xl"></i>
                                 <i class="fa-solid fa-right-long fa-2xl"></i>
@@ -155,7 +167,7 @@
                                     </div>
                                     <div class="comentario-cuadro-like">
                                         <a href="#"><i class="fa-solid fa-heart"></i></a>
-                                        <span>23</span>
+                                        <span><b>23</b></span>
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +183,7 @@
                                     </div>
                                     <div class="comentario-cuadro-like">
                                         <a href="#"><i class="fa-solid fa-heart"></i></a>
-                                        <span>12</span>
+                                        <span><b>12</b></span>
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +199,7 @@
                                     </div>
                                     <div class="comentario-cuadro-like">
                                         <a href="#"><i class="fa-solid fa-heart"></i></a>
-                                        <span>55</span>
+                                        <span><b>55</b></span>
                                     </div>
                                 </div>
                             </div>
@@ -244,8 +256,10 @@
                     <h3>Contacto</h3>
                     <a href="">Desarrolladores</a>
                     <p>Síguenos a través de nuestras redes:</p>
-                    <a href="https://twitter.com/home?lang=es"></a>
-                    <a href="https://www.facebook.com/?locale=es_LA"></a>
+                    <div>
+                        <a href="https://twitter.com/home?lang=es" class="icon-network"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/?locale=es_LA"  class="icon-network facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="footer-copyright">
